<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="_2_position" Id="{1fc2540d-d88e-4d10-97a5-cfe53b40c889}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE _2_position :
(
	position_1 := 0,
	position_2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>