<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="position_status" Id="{e9d6f729-b06b-4595-80d7-fe302aa32d8f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE position_status :
(
	unknown := 0,
	inposition,
	moving
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>